tests/type-errors/no_update_asset_key.arl
archetype no_update_asset_key

asset myasset {
  id : string;
}

action anaction (k : string) {
  effect {
    myasset[k].id := "mykey"
  }
}
